# Kura

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.ja.md  README.md  pyproject.toml  workspace.example.yaml
.github/: FUNDING.yml
docker/ai-toolkit/: Dockerfile  kura_runpod_object_job.py
docker/comfyui/: Dockerfile  kura_comfy_prepare.py
docker/musubi-tuner/: Dockerfile  patch_flux2_diffusers_vae.py
docs/: agent-first-cli.md  backend-smoke-evidence.yaml  backend-support.md  commands.md  external-access.md  musubi-adapters.md  musubi-real-smoke-plan.md  smoke-test.md  upstream-model-support-audit.md  workspace-config.md
docs/adr/: cli-generalization-plan.md  end-to-end-run-contract.md  kura-decision-model.md  last-mile-hardening-plan.md  local-disk-safety.md  path-namespace-policy.md  run-envelope-and-backend-boundaries.md  training-data-contract.md  training-resource-efficiency-report.md
docs/smoke-evidence/: 2026-07-12-framepack-docker.yaml  (+5 more)
scripts/: check_architecture.py  check_model_artifacts.py  check_no_artifacts.py  check_python.py  check_readme_cli_sync.py  check_release.py  check_runpod_safety.py  check_secrets.py  check_smoke_evidence.py  check_tests.py  check_workflows.py  clean_ignored_artifacts.py  musubi_real_smoke.py
tests/: test_agent_independent_cli.py  test_cli.py  test_container_scripts.py  test_data_contracts.py  test_dataset_inspect.py  test_dataset_observations.py  test_fsio.py  test_launch_contracts.py  test_model_requirements.py  test_monitor.py  test_paths.py  test_smoke_evidence_check.py  test_smoke_harness.py  test_tui.py
(+130 files in other folders)
