[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kura"
version = "0.1.0"
description = "Agent-first training workspace for reproducible model runs"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "plotext>=5.3.2",
    "PyYAML>=6.0",
    "pyperclip>=1.9.0",
    "rich>=13.7",
    "textual>=6.6.0",
    "textual-plotext>=1.0.1",
]

[project.optional-dependencies]
object-staging = [
    "boto3>=1.43.34",
]

[project.scripts]
kura = "kura.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kura"]
